--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-/* @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 body {
-    font-family: 'Nunito Sans', -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
-} */
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
+}
